--- a/doc/latex/main.tex
+++ b/doc/latex/main.tex
@@ -89,11 +89,12 @@
 %% ===================================================================================
 
 % [TODO: Fill in your project information here]
-\titulo{Project Title Here}
-\autor{Your Full Name (Developer)}
-\cliente{Client Name or Company}
+\titulo{Grana Livre}
+\autor{Caio Reis (Lider do Projeto) \and Felipe (Desenvolvedor) \and Gabriel (Desenvolvedor) \and Silviano (Desenvolvedor)}
+\cliente{}
 \local{City, State}
 \data{\the\year}
+\newcommand{\urlrepositorio}{https://github.com/fromcaio/tec-web}
 
 % --- Images for the Cover Page ---
 % [TODO: Make sure these image files exist in the 'imgs' folder]
