--- a/doc/latex/pretextual_elements.tex
+++ b/doc/latex/pretextual_elements.tex
@@ -14,11 +14,11 @@
 \begin{resumo}[Resumo]
 
   % [TODO: Write the executive summary of your project here.]
-  This summary should briefly describe the project's objectives, the scope of the work delivered, the key outcomes, and any major conclusions or recommendations. It is intended for stakeholders who need a quick understanding of the document's contents without reading it in its entirety. It should be written in a single paragraph.
+  O GranaLivre é uma plataforma open source de finanças pessoais que tem como objetivo auxiliar usuários no controle de receitas, despesas, investimentos e patrimônio.A aplicação busca oferecer uma experiência simples e intuitiva para o gerenciamento financeiro, permitindo a visualização clara do saldo disponível, acompanhamento de contas recorrentes, assinaturas, bens e metas financeiras.
 
   \vspace{\onelineskip} % Adds a blank line before the keywords
   \noindent % Prevents indentation for the keywords line
-  \textbf{Palavras-chave}: tecnologia-chave; entregável-principal; nome-do-projeto.
+  \textbf{Palavras-chave}: open source; finanças; planejamento financeiro; controle financeiro; aplicação web.
 \end{resumo}
 
 
