documentacao sem as imagens

--- a/doc/latex/main.tex
+++ b/doc/latex/main.tex
@@ -90,7 +90,7 @@
 
 % [TODO: Fill in your project information here]
 \titulo{Grana Livre}
-\autor{Caio Reis (Lider do Projeto) \and Felipe (Desenvolvedor) \and Gabriel (Desenvolvedor) \and Silviano (Desenvolvedor)}
+\autor{Caio Reis (Desenvolvedor e Mantenedor do Projeto) \and Felipe (Desenvolvedor) \and Gabriel (Desenvolvedor) \and Silviano (Desenvolvedor)}
 \cliente{}
 \local{City, State}
 \data{\the\year}
@@ -169,7 +169,7 @@
 
 % --- List of Acronyms and Abbreviations ---
 % [TODO: Add your acronyms to the 'acronyms.tex' file and uncomment below]
-\include{acronyms}
+% \include{acronyms}
 
 % --- List of Symbols (Optional) ---
 % [TODO: Uncomment if you have a list of symbols]
@@ -209,15 +209,15 @@
 \bibliographystyle{abnt-num}
 % The .bib file containing your references
 % [TODO: Add your references to the 'references.bib' file]
-\bibliography{references}
+% \bibliography{references}
 
 % --- Appendices (Optional) ---
 % [TODO: Uncomment if you have appendices]
-\include{posttextual/appendix_a}
+% \include{posttextual/appendix_a}
 
 % --- Attachments (Optional) ---
 % [TODO: Uncomment if you have attachments]
-\include{posttextual/attachment_a}
+% \include{posttextual/attachment_a}
 
 % --- Index (Optional) ---
 % [TODO: Uncomment to print the remissive index]
