alterando_meunome_Sandro

--- a/doc/latex/main.tex
+++ b/doc/latex/main.tex
@@ -90,7 +90,7 @@
 
 % [TODO: Fill in your project information here]
 \titulo{Grana Livre}
-\autor{Caio Reis (Desenvolvedor e Mantenedor do Projeto) \and Felipe (Desenvolvedor) \and Gabriel (Desenvolvedor) \and Silviano (Desenvolvedor)}
+\autor{Caio Reis (Desenvolvedor e Mantenedor do Projeto) \and Felipe (Desenvolvedor) \and Gabriel (Desenvolvedor) \and Sandro (Desenvolvedor)}
 \cliente{}
 \local{City, State}
 \data{\the\year}
