versao atualizada do diagrama de casos de um, versao exportada. O diagrama também foi adicionado a documentação e as telas até a 4 foram revisadas.

--- a/doc/latex/main.tex
+++ b/doc/latex/main.tex
@@ -37,6 +37,7 @@
 \usepackage{graphicx}         % For including images
 % \usepackage{xcolor}           % Already being added
 \usepackage{subcaption}       % For creating subfigures within a figure environment
+\usepackage{svg}
 
 % -----------------------------------------------------------------------------------
 % -- Tables and Listings
