adicionando prototipos a documentacao

--- a/doc/latex/main.tex
+++ b/doc/latex/main.tex
@@ -174,11 +174,11 @@
 
 % --- List of Symbols (Optional) ---
 % [TODO: Uncomment if you have a list of symbols]
-\begin{simbolos}
-   \item[$ \alpha $] -- Description of alpha symbol.
-   \item[$ \beta $] -- Description of beta symbol.
-\end{simbolos}
-\cleardoublepage
+% \begin{simbolos}
+%    \item[$ \alpha $] -- Description of alpha symbol.
+%    \item[$ \beta $] -- Description of beta symbol.
+% \end{simbolos}
+% \cleardoublepage
 
 % --- Table of Contents ---
 \pdfbookmark[0]{\contentsname}{toc}
