--- a/doc/latex/main.tex
+++ b/doc/latex/main.tex
@@ -28,9 +28,8 @@
 \usepackage[T1]{fontenc}      % Use 8-bit T1 fonts
 \usepackage[utf8]{inputenc}   % UTF-8 input encoding for accents and special characters
 \usepackage{lmodern}          % Use the Latin Modern font family for better PDF rendering
-\usepackage{indentfirst}      % Indent the first paragraph of each section
+% \usepackage{indentfirst}      % Indent the first line of each paragraph
 \usepackage{cmap}             % Make the PDF searchable and copyable
-
 % -----------------------------------------------------------------------------------
 % -- Graphics and Colors
 % -----------------------------------------------------------------------------------
@@ -92,7 +91,7 @@
 % [TODO: Fill in your project information here]
 \titulo{Grana Livre}
 \autor{Caio Reis (Desenvolvedor e Mantenedor do Projeto) \and Felipe (Desenvolvedor) \and Gabriel (Desenvolvedor) \and Sandro (Desenvolvedor)}
-\cliente{}
+\cliente{Termo de Abertura de Projeto (TAP)}
 \local{City, State}
 \data{\the\year}
 \newcommand{\urlrepositorio}{https://github.com/fromcaio/tec-web}
@@ -127,8 +126,8 @@
 % -----------------------------------------------------------------------------------
 % -- Spacing and Layout
 % -----------------------------------------------------------------------------------
-\setlength{\parindent}{1.5cm} % Paragraph indentation
-\setlength{\parskip}{0.2cm}   % Vertical space between paragraphs
+% \setlength{\parindent}{1.5cm} % Paragraph indentation
+% \setlength{\parskip}{0cm}   % Vertical space between paragraphs
 
 % -----------------------------------------------------------------------------------
 % -- Indexing
